# SlicerNNInteractive

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  compile.sh  compile_preprint.sh  external-server-setup.md
.github/: RELEASE_GUIDE.md
.github/workflows/: ci.yml  release.yml
dev_docs/: capabilities_and_interfaces.md  client_plugin_dev_install.md  lasso_3d_selection.md  multi_plane_display_volumes.md  semantic_selection_boolean_operations.md  semantic_selection_boolean_operations_review.md
paper/: paper.bib  paper.md  paper.preprint.tex
paper/jats/: paper.jats
paper/paper/: paper.bib  paper.md  paper.preprint.tex
server/: Dockerfile  Dockerfile.arm64  modal_app.py  pyproject.toml  requirements.txt
server/nninteractive_slicer_server/: main.py
slicer_plugin/: CMakeLists.txt
slicer_plugin/SlicerNNInteractive/: CMakeLists.txt  SlicerNNInteractive.py
slicer_plugin/SlicerNNInteractive/Resources/UI/: SlicerNNInteractive.ui
slicer_plugin/SlicerNNInteractive/Testing/: CMakeLists.txt
slicer_plugin/SlicerNNInteractive/Testing/Python/: SlicerNNInteractiveSegmentationTest.py
slicer_plugin/nninteractive/: CMakeLists.txt  qSlicernninteractiveModule.cxx  qSlicernninteractiveModule.h  qSlicernninteractiveModuleWidget.cxx  qSlicernninteractiveModuleWidget.h
slicer_plugin/nninteractive/Logic/: vtkSlicernninteractiveLogic.cxx  vtkSlicernninteractiveLogic.h
slicer_plugin/nninteractive/Resources/: qSlicernninteractiveModule.qrc
slicer_plugin/nninteractive/Resources/UI/: qSlicernninteractiveFooBarWidget.ui  qSlicernninteractiveModuleWidget.ui
slicer_plugin/nninteractive/Widgets/: qSlicernninteractiveFooBarWidget.cxx  qSlicernninteractiveFooBarWidget.h
timing_results/: braintumor_highcomp.json  braintumor_highcomp.md  braintumor_lowcomp.json  braintumor_lowcomp.md  high_compute_10_reruns.json  high_compute_10_reruns.md  low_compute_10_reruns.json  low_compute_10_reruns.txt  plot_timing.py
